fix login container on mobile screen

--- a/index.css
+++ b/index.css
@@ -94,6 +94,13 @@ body {
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
+@media screen and (max-width: 768px) {
+  .form-container {
+    width: 90%;
+    padding: 15px;
+  }
+}
+
 .form-group {
   margin-bottom: 30px;
 }
